# Google-Keep-Plasmoid-for-KDE-Plasma-6

./: CMakeLists.txt  README.md
contents/ui/: WebView.qml  main.qml
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: WebView.qml
